grammar/MoatlangParser.py
# Generated from ./grammar/Moatlang.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MoatlangParser ( Parser ):

    grammarFileName = "Moatlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "'['", "']'", "'=='", 
                     "'>'", "'<'", "','", "'if'", "':'", "'elif'", "'else:'", 
                     "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'*'", "'/'", "'-'", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INT", "DOUBLE", "LINE_COMMENT", "COMMENT", "ID", 
                      "MUL", "DIV", "SUB", "ADD", "STRING", "NEWLINE", "WS", 
                      "DIGIT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment_statement = 2
    RULE_expression = 3
    RULE_boolean_expression = 4
    RULE_function_statement = 5
    RULE_arguments_list = 6
    RULE_if_statement = 7
    RULE_elif_statement = 8
    RULE_else_statement = 9
    RULE_if_fragment = 10
    RULE_elif_fragment = 11
    RULE_else_fragment = 12
    RULE_code_block = 13
    RULE_list_def = 14
    RULE_array_idx = 15
    RULE_values_list = 16
    RULE_list_value = 17
    RULE_hashmap = 18
    RULE_keyvaluepairs = 19
    RULE_hashmapvalue = 20

    ruleNames =  [ "program", "statement", "assignment_statement", "expression", 
                   "boolean_expression", "function_statement", "arguments_list", 
                   "if_statement", "elif_statement", "else_statement", "if_fragment", 
                   "elif_fragment", "else_fragment", "code_block", "list_def", 
                   "array_idx", "values_list", "list_value", "hashmap", 
                   "keyvaluepairs", "hashmapvalue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    INT=16
    DOUBLE=17
    LINE_COMMENT=18
    COMMENT=19
    ID=20
    MUL=21
    DIV=22
    SUB=23
    ADD=24
    STRING=25
    NEWLINE=26
    WS=27
    DIGIT=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MoatlangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.StatementContext,i)


        def getRuleIndex(self):
            return MoatlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MoatlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MoatlangParser.T__9 or _la==MoatlangParser.ID):
                    break

            self.state = 47
            self.match(MoatlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Assignment_statementContext,0)


        def function_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Function_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MoatlangParser.If_statementContext,0)


        def getRuleIndex(self):
            return MoatlangParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MoatlangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.assignment_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.function_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.if_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assignment_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MoatlangParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(MoatlangParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(MoatlangParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MoatlangParser.RULE_assignment_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_statement" ):
                return visitor.visitAssignment_statement(self)
            else:
                return visitor.visitChildren(self)




    def assignment_statement(self):

        localctx = MoatlangParser.Assignment_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(MoatlangParser.ID)
            self.state = 55
            self.match(MoatlangParser.T__0)
            self.state = 56
            self.expression(0)
            self.state = 57
            self.match(MoatlangParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MoatlangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class EqIntContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MoatlangParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqInt" ):
                return visitor.visitEqInt(self)
            else:
                return visitor.visitChildren(self)


    class EqDblContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DOUBLE(self):
            return self.getToken(MoatlangParser.DOUBLE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqDbl" ):
                return visitor.visitEqDbl(self)
            else:
                return visitor.visitChildren(self)


    class EqHashmapContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def hashmap(self):
            return self.getTypedRuleContext(MoatlangParser.HashmapContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqHashmap" ):
                return visitor.visitEqHashmap(self)
            else:
                return visitor.visitChildren(self)


    class EqFuncContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Function_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqFunc" ):
                return visitor.visitEqFunc(self)
            else:
                return visitor.visitChildren(self)


    class EqParContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MoatlangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqPar" ):
                return visitor.visitEqPar(self)
            else:
                return visitor.visitChildren(self)


    class EqStrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(MoatlangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqStr" ):
                return visitor.visitEqStr(self)
            else:
                return visitor.visitChildren(self)


    class EqAddContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.operator = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(MoatlangParser.ADD, 0)
        def SUB(self):
            return self.getToken(MoatlangParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqAdd" ):
                return visitor.visitEqAdd(self)
            else:
                return visitor.visitChildren(self)


    class EqArrayIdxContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MoatlangParser.ID, 0)
        def expression(self):
            return self.getTypedRuleContext(MoatlangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqArrayIdx" ):
                return visitor.visitEqArrayIdx(self)
            else:
                return visitor.visitChildren(self)


    class EqVarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MoatlangParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqVar" ):
                return visitor.visitEqVar(self)
            else:
                return visitor.visitChildren(self)


    class EqMULContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.operator = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(MoatlangParser.MUL, 0)
        def DIV(self):
            return self.getToken(MoatlangParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqMUL" ):
                return visitor.visitEqMUL(self)
            else:
                return visitor.visitChildren(self)


    class EqListContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_def(self):
            return self.getTypedRuleContext(MoatlangParser.List_defContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqList" ):
                return visitor.visitEqList(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MoatlangParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MoatlangParser.EqParContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 60
                self.match(MoatlangParser.T__1)
                self.state = 61
                self.expression(0)
                self.state = 62
                self.match(MoatlangParser.T__2)
                pass

            elif la_ == 2:
                localctx = MoatlangParser.EqListContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 64
                self.list_def()
                pass

            elif la_ == 3:
                localctx = MoatlangParser.EqHashmapContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 65
                self.hashmap()
                pass

            elif la_ == 4:
                localctx = MoatlangParser.EqFuncContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.function_statement()
                pass

            elif la_ == 5:
                localctx = MoatlangParser.EqArrayIdxContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.match(MoatlangParser.ID)
                self.state = 68
                self.match(MoatlangParser.T__3)
                self.state = 69
                self.expression(0)
                self.state = 70
                self.match(MoatlangParser.T__4)
                pass

            elif la_ == 6:
                localctx = MoatlangParser.EqVarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(MoatlangParser.ID)
                pass

            elif la_ == 7:
                localctx = MoatlangParser.EqDblContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(MoatlangParser.DOUBLE)
                pass

            elif la_ == 8:
                localctx = MoatlangParser.EqIntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.match(MoatlangParser.INT)
                pass

            elif la_ == 9:
                localctx = MoatlangParser.EqStrContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(MoatlangParser.STRING)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 84
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = MoatlangParser.EqMULContext(self, MoatlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 78
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 79
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==MoatlangParser.MUL or _la==MoatlangParser.DIV):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        localctx.right = self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = MoatlangParser.EqAddContext(self, MoatlangParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 81
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 82
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==MoatlangParser.SUB or _la==MoatlangParser.ADD):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 83
                        localctx.right = self.expression(7)
                        pass

             
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Boolean_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MoatlangParser.RULE_boolean_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BoolLtContext(Boolean_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.Boolean_expressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolLt" ):
                return visitor.visitBoolLt(self)
            else:
                return visitor.visitChildren(self)


    class BoolGtContext(Boolean_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.Boolean_expressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolGt" ):
                return visitor.visitBoolGt(self)
            else:
                return visitor.visitChildren(self)


    class BoolEqContext(Boolean_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MoatlangParser.Boolean_expressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolEq" ):
                return visitor.visitBoolEq(self)
            else:
                return visitor.visitChildren(self)



    def boolean_expression(self):

        localctx = MoatlangParser.Boolean_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_boolean_expression)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = MoatlangParser.BoolEqContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                localctx.left = self.expression(0)
                self.state = 90
                self.match(MoatlangParser.T__5)
                self.state = 91
                localctx.right = self.expression(0)
                pass

            elif la_ == 2:
                localctx = MoatlangParser.BoolGtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                localctx.left = self.expression(0)
                self.state = 94
                self.match(MoatlangParser.T__6)
                self.state = 95
                localctx.right = self.expression(0)
                pass

            elif la_ == 3:
                localctx = MoatlangParser.BoolLtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                localctx.left = self.expression(0)
                self.state = 98
                self.match(MoatlangParser.T__7)
                self.state = 99
                localctx.right = self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MoatlangParser.ID, 0)

        def arguments_list(self):
            return self.getTypedRuleContext(MoatlangParser.Arguments_listContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoatlangParser.NEWLINE)
            else:
                return self.getToken(MoatlangParser.NEWLINE, i)

        def getRuleIndex(self):
            return MoatlangParser.RULE_function_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_statement" ):
                return visitor.visitFunction_statement(self)
            else:
                return visitor.visitChildren(self)




    def function_statement(self):

        localctx = MoatlangParser.Function_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(MoatlangParser.ID)
            self.state = 104
            self.match(MoatlangParser.T__1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MoatlangParser.T__1) | (1 << MoatlangParser.T__3) | (1 << MoatlangParser.T__13) | (1 << MoatlangParser.INT) | (1 << MoatlangParser.DOUBLE) | (1 << MoatlangParser.ID) | (1 << MoatlangParser.STRING))) != 0):
                self.state = 105
                self.arguments_list()


            self.state = 108
            self.match(MoatlangParser.T__2)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.match(MoatlangParser.NEWLINE) 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arguments_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoatlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MoatlangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MoatlangParser.RULE_arguments_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments_list" ):
                return visitor.visitArguments_list(self)
            else:
                return visitor.visitChildren(self)




    def arguments_list(self):

        localctx = MoatlangParser.Arguments_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arguments_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expression(0)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MoatlangParser.T__8:
                self.state = 116
                self.match(MoatlangParser.T__8)
                self.state = 117
                self.expression(0)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_fragment(self):
            return self.getTypedRuleContext(MoatlangParser.If_fragmentContext,0)


        def code_block(self):
            return self.getTypedRuleContext(MoatlangParser.Code_blockContext,0)


        def elif_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Elif_statementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Else_statementContext,0)


        def getRuleIndex(self):
            return MoatlangParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = MoatlangParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.if_fragment()
            self.state = 124
            self.code_block()
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MoatlangParser.T__11]:
                self.state = 125
                self.elif_statement()
                pass
            elif token in [MoatlangParser.T__12]:
                self.state = 126
                self.else_statement()
                pass
            elif token in [MoatlangParser.EOF, MoatlangParser.T__9, MoatlangParser.T__14, MoatlangParser.ID]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Elif_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elif_fragment(self):
            return self.getTypedRuleContext(MoatlangParser.Elif_fragmentContext,0)


        def code_block(self):
            return self.getTypedRuleContext(MoatlangParser.Code_blockContext,0)


        def elif_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Elif_statementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(MoatlangParser.Else_statementContext,0)


        def getRuleIndex(self):
            return MoatlangParser.RULE_elif_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif_statement" ):
                return visitor.visitElif_statement(self)
            else:
                return visitor.visitChildren(self)




    def elif_statement(self):

        localctx = MoatlangParser.Elif_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elif_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.elif_fragment()
            self.state = 130
            self.code_block()
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MoatlangParser.T__11]:
                self.state = 131
                self.elif_statement()
                pass
            elif token in [MoatlangParser.T__12]:
                self.state = 132
                self.else_statement()
                pass
            elif token in [MoatlangParser.EOF, MoatlangParser.T__9, MoatlangParser.T__14, MoatlangParser.ID]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def else_fragment(self):
            return self.getTypedRuleContext(MoatlangParser.Else_fragmentContext,0)


        def code_block(self):
            return self.getTypedRuleContext(MoatlangParser.Code_blockContext,0)


        def getRuleIndex(self):
            return MoatlangParser.RULE_else_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_statement" ):
                return visitor.visitElse_statement(self)
            else:
                return visitor.visitChildren(self)




    def else_statement(self):

        localctx = MoatlangParser.Else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_else_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.else_fragment()
            self.state = 136
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_fragmentContext(ParserRuleContext):
